<resources>
    <string name="app_name">Ratatouille23</string>
    <string name="passwordHint">Password</string>
    <string name="confermaPasswordHint">Conferma Password</string>
    <string name="nomeUtenteHint">Nome Utente</string>
    <string name="registratiText">Hai un ristorante? Registrati</string>
    <string name="nomeApp">Ratatouille23</string>
    <string name="accediButton">Accedi</string>
    <string name="campiErrati">Nome Utente e/o Password errati</string>
    <string name="emailHint">Email</string>
    <string name="registratiButton">Registrati</string>
    <string name="campiNonCompilati">È obbligatorio compilare tutti i campi</string>
    <string name="confermaButton">Conferma</string>
    <string name="passwordDiverse">Le password non corrispondono</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragmentCreaUtenteText">Fragment Crea Utente</string>
    <string name="fragmentHomeAdminText">Fragment Home Admin</string>
    <string name="fragmentPersonalizzaMenuText">Fragment Personalizza Menù</string>
    <string name="fragmentVisualizzaStatisticheText">Fragment Visualizza Statistiche</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuovaPasswordText">Inserisci una nuova password</string>
    <string name="nomeAttivita">Nome Attività</string>
    <string name="fragmentContiText">Fragment Conti</string>
    <string name="fragmentHomeSupervisoreText">Fragment Home Supervisore</string>
    <string name="fragmentHomeAddettoSalaText">Fragment Home Addetto Sala</string>
    <string name="fragmentOrdinazioniText">Fragment Ordinazioni</string>
    <string name="nuovo_utente_text">Nuovo utente</string>
    <string name="seleziona_tipologia_di_utente_text">Seleziona tipologia di utente</string>
    <string name="crea_utente_button_text">Crea utente</string>
    <string name="luogoAttivita">Indirizzo</string>
    <string name="telefonoAttivita">Telefono</string>
    <string name="capienzaAttivita">Capienza</string>
    <string name="modificaButton">Modifica</string>
    <string name="immagine">Immagine</string>
    <string name="selezionaImmagine">Aggiungi Immagine</string>
    <string name="creaAvviso">Crea Avviso</string>
    <string name="titoloInserisciAvviso">Avviso</string>
    <string name="aggiungiProdotto">Aggiungi Prodotto</string>
    <string name="aggiungiSezione">Aggiungi Sezione</string>
    <string name="modificaSezioni">Modifica le sezioni</string>
    <string name="nuovoProdotto">Nuovo Prodotto</string>
    <string name="nomeProdotto">Nome Prodotto</string>
    <string name="nomeProdottoSecondaLingua">Nome seconda lingua *opzionale*</string>
    <string name="costoProdotto">Costo</string>
    <string name="ingredientiProdotto">Ingredienti</string>
    <string name="ingredientiProdottoSecondaLingua">Ingredienti seconda lingua *opzionale*</string>
    <string name="selezionaTipologiaProdotto">Seleziona tipologia di prodotto</string>
    <string name="seleziona_tipologia_di_prodotto_text">Seleziona tipologia di prodotto</string>
    <string name="aggiungiSezioneFondo">Aggiungi una sezione sul fondo</string>
    <string name="nuovaSezione">Nuova Sezione</string>
    <string name="selezionaTavolo">Seleziona il tavolo</string>
    <string name="numeroCommensali">Numero commensali</string>
    <string name="prodottiSelezionati">Prodotti selezionati</string>
    <string name="chiudiConto">Chiudi conto</string>
    <string name="visualizzaConto">Visualizza conto</string>
    <string name="totale">Totale</string>
    <string name="eliminaSezione">Scegli sezione da eliminare</string>
    <string name="eliminaSezioneButton">Elimina Sezione</string>
    <string name="salvaModifiche">Salva Modifiche</string>
    <string name="eliminaProdotto">Elimina Prodotto</string>
    <string name="scegliIntervallo">Scegli Intervallo</string>
    <string name="ordinaSezioni">Ordina le sezioni in ordine:</string>
    <string name="ordineCrescente">Crescente</string>
    <string name="ordineDecrescente">Decrescente</string>
    <string name="menu">Menù</string>
    <string name="salvaOrdinazione">Salva Ordinazione</string>
    <string name="indietro">Indietro</string>
    <string name="quantita">Quantità</string>
    <string name="numeroCommensaliEditText">N. Commensali</string>
    <string name="esempioAvviso">"The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"</string>
    <string name="logout">Logout</string>
    <string name="dataInizio">Data Inizio</string>
    <string name="dataFine">Data Fine</string>
    <string name="selezionaIntervallo">Seleziona Intervallo Statistiche</string>
    <string name="cerca">Cerca</string>
    <string name="incassoTotale">Incasso Totale</string>
    <string name="incassoMedio">Incasso Medio</string>
    <string name="allergeni">Allergeni</string>
</resources>