<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DEFAULT_COLOR"
    tools:context=".UI.fragment.ModificaProdottoFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/allergeniVisualizzaLayout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/quantitaVisualizzaLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/allergeniVisualizzaEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EBEBEB"
            android:hint="@string/allergeni"
            android:inputType="none"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/aggiungiProdottoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/YELLOW_LOGO"
        android:text="@string/aggiungiProdotto"
        app:layout_constraintBottom_toTopOf="@+id/indietroButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nomeProdottoVisualizzaLayout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/nomeProdottoSecondaLinguaVisualizzaLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nomeProdottoVisualizzaEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EBEBEB"
            android:hint="@string/nomeProdotto"
            android:inputType="none"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nomeProdottoSecondaLinguaVisualizzaLayout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/ingredientiVisualizzaLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nomeProdottoSecondaLinguaVisualizzaEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EBEBEB"
            android:hint="@string/nomeProdottoSecondaLingua"
            android:inputType="none"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingredientiVisualizzaLayout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/ingredientiSecondaLinguaVisualizzaLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredientiVisualizzaEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EBEBEB"
            android:hint="@string/ingredientiProdotto"
            android:inputType="none"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingredientiSecondaLinguaVisualizzaLayout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/prezzoVisualizzaLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredientiSecondaLinguaVisualizzaEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EBEBEB"
            android:hint="@string/ingredientiProdottoSecondaLingua"
            android:inputType="none"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prezzoVisualizzaLayout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/allergeniVisualizzaLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prezzoVisualizzaEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EBEBEB"
            android:hint="@string/costoProdotto"
            android:inputType="none"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/indietroButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/YELLOW_LOGO"
        android:text="@string/indietro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantitaVisualizzaLayout"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/aggiungiProdottoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantitaVisualizzaEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/quantita"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>